plugins/compose/compiler-hosted/integration-tests/testData/analysis/composableDeclarationChecker/composableMainFunA.kt
// RUN_PIPELINE_TILL: FRONTEND

import androidx.compose.runtime.Composable

@Composable fun <!COMPOSABLE_FUN_MAIN!>main<!>() {}
